--- a/res/layout/activity_main_l.xml
+++ b/res/layout/activity_main_l.xml
@@ -190,10 +190,9 @@
                     android:id="@+id/btnMoreInfo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/btnCancelSel"
                     android:layout_alignParentTop="true"
-                    android:layout_alignRight="@+id/btnCancelSel"
-                    android:layout_marginBottom="16dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginBottom="8dp"
                     android:contentDescription="@string/information"
                     android:nextFocusDown="@+id/btnMoveSel"
                     android:nextFocusForward="@+id/btnMoveSel"
@@ -205,10 +204,9 @@
                     android:id="@+id/btnMoveSel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/btnCancelSel"
-                    android:layout_alignRight="@+id/btnCancelSel"
                     android:layout_below="@+id/btnMoreInfo"
-                    android:layout_marginBottom="16dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginBottom="8dp"
                     android:contentDescription="@string/move"
                     android:nextFocusDown="@+id/btnRemoveSel"
                     android:nextFocusForward="@+id/btnRemoveSel"
@@ -220,9 +218,9 @@
                     android:id="@+id/btnRemoveSel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignLeft="@+id/btnCancelSel"
-                    android:layout_alignRight="@+id/btnCancelSel"
                     android:layout_below="@+id/btnMoveSel"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginBottom="8dp"
                     android:contentDescription="@string/remove"
                     android:nextFocusDown="@+id/btnCancelSel"
                     android:nextFocusForward="@+id/btnCancelSel"
@@ -231,11 +229,24 @@
                     android:nextFocusUp="@+id/btnMoveSel"/>
 
                 <br.com.carlosrafaelgn.fplay.ui.BgButton
+                    android:id="@+id/btnSetRingtone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/btnRemoveSel"
+                    android:layout_alignParentLeft="true"
+                    android:contentDescription="@string/ringtone"
+                    android:nextFocusDown="@+id/btnCancelSel"
+                    android:nextFocusForward="@+id/btnCancelSel"
+                    android:nextFocusLeft="@+id/list"
+                    android:nextFocusRight="@+id/list"
+                    android:nextFocusUp="@+id/btnRemoveSel"/>
+
+                <br.com.carlosrafaelgn.fplay.ui.BgButton
                     android:id="@+id/btnCancelSel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentLeft="true"
                     android:nextFocusDown="@+id/list"
                     android:nextFocusForward="@+id/list"
                     android:nextFocusLeft="@+id/list"
