--- a/res/layout/activity_main_ls.xml
+++ b/res/layout/activity_main_ls.xml
@@ -282,13 +282,10 @@
             android:text="@string/msg_sel"
             android:visibility="gone"/>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/panelSelection"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:baselineAligned="false"
-            android:gravity="right"
-            android:orientation="horizontal"
             android:splitMotionEvents="false"
             android:visibility="gone">
 
@@ -296,7 +293,7 @@
                 android:id="@+id/btnCancelSel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="40dp"
+                android:layout_alignParentLeft="true"
                 android:nextFocusDown="@+id/list"
                 android:nextFocusForward="@+id/btnMoreInfo"
                 android:nextFocusLeft="@+id/list"
@@ -309,6 +306,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
+                android:layout_toLeftOf="@+id/btnMoreInfo"
                 android:contentDescription="@string/ringtone"
                 android:nextFocusDown="@+id/list"
                 android:nextFocusForward="@+id/btnMoreInfo"
@@ -321,6 +319,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
+                android:layout_toLeftOf="@+id/btnMoveSel"
                 android:contentDescription="@string/information"
                 android:nextFocusDown="@+id/list"
                 android:nextFocusForward="@+id/btnMoveSel"
@@ -333,6 +332,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
+                android:layout_toLeftOf="@+id/btnRemoveSel"
                 android:contentDescription="@string/move"
                 android:nextFocusDown="@+id/list"
                 android:nextFocusForward="@+id/btnRemoveSel"
@@ -344,13 +344,14 @@
                 android:id="@+id/btnRemoveSel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:contentDescription="@string/remove"
                 android:nextFocusDown="@+id/list"
                 android:nextFocusForward="@+id/list"
                 android:nextFocusLeft="@+id/btnMoveSel"
                 android:nextFocusRight="@+id/list"
                 android:nextFocusUp="@+id/list"/>
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
