--- a/res/layout/activity_main_l.xml
+++ b/res/layout/activity_main_l.xml
@@ -252,6 +252,7 @@
                     android:nextFocusLeft="@+id/list"
                     android:nextFocusRight="@+id/list"
                     android:nextFocusUp="@+id/btnRemoveSel"
+                    android:contentDescription="@string/cancel"
                     android:text="@string/cancel"/>
             </RelativeLayout>
         </LinearLayout>
