--- a/res/layout/activity_main_l_controls_ls.xml
+++ b/res/layout/activity_main_l_controls_ls.xml
@@ -279,6 +279,7 @@
                 android:nextFocusLeft="@+id/list"
                 android:nextFocusRight="@+id/btnMoreInfo"
                 android:nextFocusUp="@+id/list"
+                android:contentDescription="@string/cancel"
                 android:text="@string/cancel"/>
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
