--- a/res/layout/activity_browser2.xml
+++ b/res/layout/activity_browser2.xml
@@ -103,8 +103,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/panelControls"
-        android:ellipsize="start"
-        android:maxLines="3"/>
+        android:ellipsize="middle"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
+        android:text="@string/home"/>
 
     <TextView
         android:id="@+id/lblLoading"
