--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -183,11 +183,25 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:contentDescription="@string/go_back"
-                android:nextFocusDown="@+id/btnMoreInfo"
-                android:nextFocusForward="@+id/btnMoreInfo"
+                android:nextFocusDown="@+id/btnShare"
+                android:nextFocusForward="@+id/btnShare"
                 android:nextFocusLeft="@+id/list"
-                android:nextFocusRight="@+id/btnMoreInfo"
+                android:nextFocusRight="@+id/btnShare"
                 android:nextFocusUp="@+id/list"/>
+
+            <br.com.carlosrafaelgn.fplay.ui.BgButton
+                android:id="@+id/btnShare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btnCancelSel"
+                android:layout_marginRight="8dp"
+                android:layout_toLeftOf="@+id/btnSetRingtone"
+                android:contentDescription="@string/share"
+                android:nextFocusDown="@+id/list"
+                android:nextFocusForward="@+id/btnSetRingtone"
+                android:nextFocusLeft="@+id/btnCancelSel"
+                android:nextFocusRight="@+id/btnSetRingtone"
+                android:nextFocusUp="@+id/btnCancelSel"/>
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
                 android:id="@+id/btnSetRingtone"
@@ -199,7 +213,7 @@
                 android:contentDescription="@string/ringtone"
                 android:nextFocusDown="@+id/list"
                 android:nextFocusForward="@+id/btnMoreInfo"
-                android:nextFocusLeft="@+id/btnCancelSel"
+                android:nextFocusLeft="@+id/btnShare"
                 android:nextFocusRight="@+id/btnMoreInfo"
                 android:nextFocusUp="@+id/btnCancelSel"/>
 
@@ -213,7 +227,7 @@
                 android:contentDescription="@string/information"
                 android:nextFocusDown="@+id/list"
                 android:nextFocusForward="@+id/btnMoveSel"
-                android:nextFocusLeft="@+id/btnCancelSel"
+                android:nextFocusLeft="@+id/btnSetRingtone"
                 android:nextFocusRight="@+id/btnMoveSel"
                 android:nextFocusUp="@+id/btnCancelSel"/>
 
