--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -8,8 +8,8 @@
     -->
     <style name="AppBaseTheme" parent="@android:style/Theme.Material.Light.NoActionBar.Fullscreen">
         <!-- API 21 theme customizations can go here. -->
-        <item name="android:colorPrimary">#ff444abf</item>
-        <item name="android:colorAccent">#ff444abf</item>
+        <item name="android:colorPrimary">#ff444abf</item> <!-- #ff444abf -->
+        <item name="android:colorAccent">#ff3344bb</item> <!-- #ff444abf -->
         <item name="android:colorControlNormal">#ff6d6d6d</item>
     </style>
 
