Setting default to not fullscreen, splitting the APK into several smaller APK's according to the platform's ABI, general improvements in list classes, removing AsyncTask from Request class, trying to improve the http receiver on API's < 16

--- a/res/values-v13/styles.xml
+++ b/res/values-v13/styles.xml
@@ -6,7 +6,7 @@
 		AppBaseTheme from BOTH res/values/styles.xml and res/values-v11/styles.xml 
 		on API 13+ devices.
     -->
-    <style name="AppBaseTheme" parent="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
+    <style name="AppBaseTheme" parent="@android:style/Theme.Holo.Light.NoActionBar">
         <!-- API 13 theme customizations can go here. -->
     </style>
 
