--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -6,7 +6,7 @@
 		AppBaseTheme from BOTH res/values/styles.xml, res/values-v11/styles.xml and res/values-v13/styles.xml
 		on API 21+ devices.
     -->
-    <style name="AppBaseTheme" parent="@android:style/Theme.Material.Light.NoActionBar.Fullscreen">
+    <style name="AppBaseTheme" parent="@android:style/Theme.Material.Light.NoActionBar">
         <!-- API 21 theme customizations can go here. -->
         <item name="android:colorPrimary">#ff3344bb</item> <!-- #ff444abf -->
         <item name="android:colorAccent">#ff3344bb</item> <!-- #ff444abf -->
