--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -5,7 +5,7 @@
          Base application theme for API 11+. This theme completely replaces 
 		AppBaseTheme from res/values/styles.xml on API 11+ devices.
     -->
-    <style name="AppBaseTheme" parent="@android:style/Theme.Holo.NoActionBar.Fullscreen">
+    <style name="AppBaseTheme" parent="@android:style/Theme.Holo.NoActionBar">
         <!-- API 11 theme customizations can go here. -->
     </style>
 
