--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -55,4 +55,8 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="BgDialogNoDimming" parent="BgDialog">
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
 </resources>
