--- a/res/layout-v21/notification.xml
+++ b/res/layout-v21/notification.xml
@@ -15,7 +15,7 @@
         android:contentDescription="@string/app_name"
         android:padding="2dp"
         android:scaleType="centerInside"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_launcher_fg"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
