--- a/res/layout/activity_main_l_left_ls.xml
+++ b/res/layout/activity_main_l_left_ls.xml
@@ -19,7 +19,12 @@
         android:nextFocusForward="@+id/barVolume"
         android:splitMotionEvents="false">
 
-        <requestFocus/>
+        <!--
+            When this tag is present, and the device is being
+            controlled by a mouse, the control gains the focus
+            and only loses it when a keyboard key is pressed!
+        -->
+        <!--<requestFocus/>-->
     </br.com.carlosrafaelgn.fplay.ui.BgListView>
 
 </LinearLayout>
